# geobench

./: .gitignore  README.rst  pyproject.toml
geobench/: __init__.py  sneddon.py
tests/: test_geobench.py  test_sneddon.py
