[tool.poetry]
name = "geobench"
version = "0.1.0"
description = ""
authors = ["Qing Yin <qingbyin@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
